# kim

./: .gitignore  404.html  LICENSE  README.md  WIKI.md  _config.yml  index.html  install.ps1  install.sh  kim.py  kim_scheduler.py  mkdocs.yml  pyproject.toml  sitemap.xml  test_install.ps1  test_install.sh  test_kim_memory.py  uninstall.sh
.github/agents/: AGENTS.md
.github/workflows/: build.yml  docs.yml  mkdocs.yml  release.yml  test.yml
changelog/: index.html
commands/: index.html
configuration/: index.html
development/: index.html
docs/: changelog.md  commands.md  configuration.md  development.md  index.md  installation.md  slack.md  sound.md
installation/: index.html
kim/: __init__.py  __main__.py  cli.py  core.py  interactive.py  notifications.py  scheduler.py  selfupdate.py  sound.py  utils.py
kim/commands/: config.py  daemon.py  management.py  misc.py
kim/ui/: __init__.py  app.py  config_watcher.py  main_window.py  oneshot_dialog.py  reminder_dialog.py  settings_dialog.py  theme.py  tray.py
search/: search_index.json
slack/: index.html
sound/: index.html
tests/: test_basic.py  test_features.py  test_kim.py  test_regression.py  test_ui.py
