[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kim-reminder"
version = "4.5.7"
description = "Lightweight cross-platform reminder daemon for developers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pratik Wayal", email = "pratikwayal01@gmail.com"}
]
keywords = ["reminder", "daemon", "notification", "cli", "productivity", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["build", "twine", "pytest"]

[project.scripts]
kim = "kim.cli:main"

[project.urls]
Homepage = "https://github.com/pratikwayal01/kim"
Documentation = "https://pratikwayal01.github.io/kim/"
Repository = "https://github.com/pratikwayal01/kim"
Issues = "https://github.com/pratikwayal01/kim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kim*"]

[tool.setuptools.package-data]
kim = ["py.typed"]
